--- a/WildEMR/Properties/AndroidManifest.xml
+++ b/WildEMR/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="WildEMR.WildEMR" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="16" />
+	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="22" />
 	<application android:label="WildEMR"></application>
 </manifest>
